fix shared by text going out of box, fix #895

--- a/core/css/share.css
+++ b/core/css/share.css
@@ -84,3 +84,5 @@
  a.showCruds:hover,a.unshare:hover {
  	opacity:1;
  }
+
+.reshare { white-space:normal; } /* fix shared by text going out of box */
